--- a/toolkits/sugar/src/scss/helper/class/_screen-reader.scss
+++ b/toolkits/sugar/src/scss/helper/class/_screen-reader.scss
@@ -1,10 +1,25 @@
+/**
+ * @name              helper-screen-reader-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "screen-reader" related helper classes.
+ *
+ * @classname     #{sel(sr-only)}      Display the element only on screen readers
+ *
+ * @example         scss
+ * @include Sugar.helper-screen-reader-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin helper-screen-reader-classes() {
   @if class-match-namespace('sugar.helper.screen-reader.only') {
     /**
     * @name 		#{sel(sr-only)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.screen-reader.only
-    * @type        class
+    * @type        Classname
     *
     * Display the element only on screen readers
     *
