--- a/toolkits/sugar/src/scss/color/class/_color.scss
+++ b/toolkits/sugar/src/scss/color/class/_color.scss
@@ -1,3 +1,21 @@
+/**
+ * @name              color-classes
+ * @namespace         sugar.scss.color.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "color" related classes.
+ *
+ * @classname       #{sel(c-[color])}        Apply a special color
+ * @classname       #{sel(bg-[color])}        Apply a special background color
+ * @classname       #{sel(c-[color]--[modifier])}        Apply a special color using a modifier
+ * @classname       #{sel(bg-[color]--[modifier])}        Apply a special background color using a modifier
+ *
+ * @example         scss
+ * @include Sugar.color-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin color-classes() {
 
   @if class-match-namespace('sugar.color') {
@@ -19,7 +37,7 @@
             * @name       	#{$cls}
             * @namespace       sugar.scss.colo.class
             * @class-namespace           sugar.color.#{$name}
-            * @type        class
+            * @type        Classname
             *
             * Specify the color to **#{$name}**
             *
@@ -43,7 +61,7 @@
             * @name       	#{$cls}
             * @namespace       sugar.scss.color.class
             * @class-namespace           sugar.color.#{$name}.bg
-            * @type        class
+            * @type        Classname
             *
             * Specify the background color to **#{$name}**
             *
@@ -70,7 +88,7 @@
                 * @name       	#{$cls}
                 * @namespace       sugar.scss.color.class
                 * @class-namespace           sugar.color.#{$name}.#{$mod-name}
-                * @type        class
+                * @type        Classname
                 *
                 * Specify the color to **#{$name}--#{$mod-name}**
                 *
