--- a/toolkits/sugar/src/scss/font/class/_font.scss
+++ b/toolkits/sugar/src/scss/font/class/_font.scss
@@ -1,3 +1,18 @@
+/**
+ * @name              font-classes
+ * @namespace         sugar.scss.font.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "font" related classes.
+ *
+ * @classname       #{sel(f-[name])}       Apply the font [name]
+ *
+ * @example         scss
+ * @include Sugar.font-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin font-classes() {
   @if class-match-namespace('sugar.font.family') {
     @each $name, $font in setting('fonts') {
@@ -6,7 +21,7 @@
           * @name       	  #{sel(f-#{$name})}
           * @namespace       sugar.scss.font.class
           * @class-namespace           sugar.font.family.#{$name}
-          * @type        class
+          * @type        Classname
           *
           * Apply the font **#{$name}**
           *
@@ -22,143 +37,6 @@
           @include font($name);
         }
       }
-    }
-  }
-
-  @if class-match-namespace('sugar.font.weight.bold') {
-    /**
-    * @name 		#{sel(f-bold)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.weight.bold
-    * @type        class
-    *
-    * Set the font-weight to ```bold```
-    *
-    * @example 	html
-    * This <span class="#{sel(f-bold)}">word</span> is bold
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-bold)} {
-      font-weight: bold;
-    }
-  }
-  @if class-match-namespace('sugar.font.weight.lighter') {
-    /**
-    * @name 		#{sel(f-lighter)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.weight.lighter
-    * @type        class
-    *
-    * Set the font-weight to ```lighter```
-    *
-    * @example 	html
-    * 	This <span class="#{sel(f-lighter)}">word</span> is lighter
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-lighter)} {
-      font-weight: lighter;
-    }
-  }
-  @if class-match-namespace('sugar.font.weight.bolder') {
-    /**
-    * @name 		#{sel(f-bolder)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.weight.bolder
-    * @type        class
-    *
-    * Set the font-weight to ```bolder```
-    *
-    * @example 	html
-    * This <span class="#{sel(f-bolder)}">word</span> is bolder
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-bolder)} {
-      font-weight: bolder;
-    }
-  }
-  @if class-match-namespace('sugar.font.weight.normal') {
-    /**
-    * @name 		#{sel(f-normal)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.weight.normal
-    * @type        class
-    *
-    * Set the font-weight to ```normal```
-    *
-    * @example 	html
-    * <div class="#{sel(f-bold)}">
-    * 	This <span class="#{sel(f-normal)}">word</span> is normal
-    * </div>
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-normal)} {
-      font-weight: normal;
-      font-style: normal;
-    }
-  }
-  @if class-match-namespace('sugar.font.style.italic') {
-    /**
-    * @name 		#{sel(f-italic)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.style.italic
-    * @type        class
-    *
-    * Set the font-style to ```italic```
-    *
-    * @example 	html
-    * This <span class="#{sel(f-italic)}">word</span> is italic
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-italic)} {
-      font-style: italic;
-    }
-  }
-  @if class-match-namespace('sugar.font.style.oblique') {
-    /**
-    * @name 		#{sel(f-oblique)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.style.oblique
-    * @type        class
-    *
-    * Set the font-style to ```oblique```
-    *
-    * @example 	html
-    * This <span class="#{sel(f-oblique)}">word</span> is oblique
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-oblique)} {
-      font-style: oblique;
-    }
-  }
-  @if class-match-namespace('sugar.font.variant.small-caps') {
-    /**
-    * @name 		#{sel(f-small-caps)}
-    * @namespace           sugar.scss.font.class
-    * @class-namespace     sugar.font.variant.small-caps
-    * @type        class
-    *
-    * Set the font-variant to ```small-caps```
-    *
-    * @example 	html
-    * This <span class="#{sel(f-small-caps)}">word</span> is small-caps
-    *
-    * @since       1.0.0
-    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(f-small-caps)} {
-      font-variant: small-caps;
     }
   }
 }
