--- a/toolkits/sugar/src/scss/helper/class/_overflow.scss
+++ b/toolkits/sugar/src/scss/helper/class/_overflow.scss
@@ -1,10 +1,26 @@
-@mixin overflow-classes-classes() {
+/**
+ * @name              helper-overflow-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "overflow" related helper classes.
+ *
+ * @classname     #{sel(overflow-hidden)}      Set the overflow to hidden
+ * @classname     #{sel(overflow-auto)}      Set the overflow to auto
+ *
+ * @example         scss
+ * @include Sugar.helper-overflow-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
+@mixin helper-overflow-classes() {
   @if class-match-namespace('sugar.helper.overflow.hidden') {
     /**
     * @name 		#{sel(overflow-hidden)}
     * @namespace           sugar.scss.helper.class
     * @class-namespace     sugar.helper.overflow.hidden
-    * @type        class
+    * @type        Classname
     *
     * Set the overflow to hidden
     *
@@ -31,7 +47,7 @@
     * @name 		#{sel(overflow-auto)}
     * @namespace           sugar.scss.helper.class
     * @class-namespace     sugar.helper.overflow.auto
-    * @type        class
+    * @type        Classname
     *
     * Set the overflow to auto
     *
