--- a/toolkits/sugar/src/scss/helper/class/_padding.scss
+++ b/toolkits/sugar/src/scss/helper/class/_padding.scss
@@ -1,3 +1,31 @@
+/**
+ * @name              helper-padding-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "padding" related helper classes.
+ *
+ * @classname     #{sel(p-[size])}          Set the paddings to a special size
+ * @classname     #{sel(p-b-[size])}          Set the padding bottom to a special size
+ * @classname     #{sel(p-t-[size])}          Set the padding top to a special size
+ * @classname     #{sel(p-l-[size])}          Set the padding left to a special size
+ * @classname     #{sel(p-r-[size])}          Set the padding right to a special size
+ * @classname     #{sel(p-s-[size])}          Set the paddings side to a special size
+ * @classname     #{sel(p-y-[size])}          Set the paddings y (top and bottom) to a special size
+ * @classname     #{sel(no-p)}          Reset **all** paddings
+ * @classname     #{sel(no-p-t)}          Reset **top** padding
+ * @classname     #{sel(no-p-r)}          Reset **right** padding
+ * @classname     #{sel(no-p-b)}          Reset **bottom** padding
+ * @classname     #{sel(no-p-l)}          Reset **left** padding
+ * @classname     #{sel(no-p-s)}          Reset **side** paddings
+ * @classname     #{sel(no-p-y)}          Reset **y (top and bottom)** paddings
+ *
+ * @example         scss
+ * @include Sugar.helper-padding-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin helper-padding-classes() {
   @if class-match-namespace('sugar.helper.padding') {
     $sizes: setting('sizes');
@@ -10,7 +38,7 @@
           * @class-namespace           sugar.helper.padding.#{$name}
           * @type        class
           *
-          * Set the paddings to the **#{$size}** size
+          * Set the paddings to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -37,9 +65,9 @@
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
           * @class-namespace           sugar.helper.padding.bottom.#{$name}
-          * @type        class
+          * @type        Classname
           *
-          * Set the **bottom** padding to the **#{$size}** size
+          * Set the **bottom** padding to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -60,9 +88,9 @@
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
           * @class-namespace           sugar.helper.padding.top.#{$name}
-          * @type        class
+          * @type        Classname
           *
-          * Set the **top** padding to the **#{$size}** size
+          * Set the **top** padding to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -83,9 +111,9 @@
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
           * @class-namespace           sugar.helper.padding.left.#{$name}
-          * @type        class
+          * @type        Classname
           *
-          * Set the **left** padding  to the **#{$size}** size
+          * Set the **left** padding  to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -108,7 +136,7 @@
           * @class-namespace           sugar.helper.padding.right.#{$name}
           * @type        class
           *
-          * Set the **right** padding  to the **#{$size}** size
+          * Set the **right** padding  to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -129,9 +157,9 @@
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
           * @class-namespace           sugar.helper.padding.side.#{$name}
-          * @type        class
+          * @type        Classname
           *
-          * Set the **side** padding  to the **#{$size}** size
+          * Set the **side** padding  to the **#{$name}** size
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -153,9 +181,9 @@
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
           * @class-namespace           sugar.helper.padding.y.#{$name}
-          * @type        class
+          * @type        Classname
           *
-          * Set the **top and bottom** padding to the **#{$size}**
+          * Set the **top and bottom** padding to the **#{$name}**
           *
           * @example 	html
           * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
@@ -172,15 +200,35 @@
       }
     }
 
+    @if class-match-namespace('sugar.helper.padding.no') {
+      /**
+      * @name       	#{sel(no-p)}
+      * @namespace       sugar.scss.core.class
+      * @class-namespace           sugar.helper.padding.no
+      * @type        Classname
+      *
+      * Reset **all** paddings
+      *      
+      * @example 	html
+      * <div class="#{sel(no-p)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      *
+      * @since       1.0.0
+      * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+      */
+      .#{sel(no-p)} {
+        padding: 0 !important;
+      }
+    }
+
     @if class-match-namespace('sugar.helper.padding.no.top') {
       /**
       * @name       	#{sel(no-p-t)}
       * @namespace       sugar.scss.core.class
       * @class-namespace           sugar.helper.padding.no.top
-      * @type        class
+      * @type        Classname
       *
       * Reset **top** padding
-      *
+      *      
       * @example 	html
       * <div class="#{sel(no-p-t)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
@@ -197,10 +245,10 @@
         * @name       	#{sel(no-p-r)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.right
-        * @type        class
+        * @type        Classname
         *
         * Reset **right** padding
-        *
+        *      
         * @example 	html
         * <div class="#{sel(no-p-r)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
@@ -260,7 +308,7 @@
         * @type        class
         *
         * Reset **left** and **right** paddings
-        *
+        *      
         * @example 	html
         * <div class="#{sel(no-p-s)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
