--- a/toolkits/sugar/src/scss/helper/class/_position.scss
+++ b/toolkits/sugar/src/scss/helper/class/_position.scss
@@ -1,10 +1,31 @@
+/**
+ * @name              helper-position-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "position" related helper classes.
+ *
+ * @classname     #{sel(relative)}       Set an element position as ```relative```
+ * @classname     #{sel(absolute)}       Set an element position as ```absolute```
+ * @classname     #{sel(fixed)}       Set an element position as ```fixed```
+ * @classname     #{sel(fixed-top)}       Set an element position as ```fixed``` top
+ * @classname     #{sel(fixed-bottom)}       Set an element position as ```fixed``` bottom
+ * @classname     #{sel(sticky)}       Set an element position as ```sticky```
+ * @classname     #{sel(sticky)}       Set an element position as ```sticky``` top
+ *
+ * @example         scss
+ * @include Sugar.helper-position-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin helper-position-classes() {
   @if class-match-namespace('sugar.helper.position.relative') {
     /**
     * @name 		#{sel(relative)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.relative
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```relative```
     *
@@ -26,7 +47,7 @@
     * @name 		#{sel(absolute)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.absolute
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```absolute```
     *
@@ -48,7 +69,7 @@
     * @name 		#{sel(fixed)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.fixed
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```fixed```
     *
@@ -73,7 +94,7 @@
     * @name 		#{sel(fixed-top)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.fixed.top
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```fixed``` top
     *
@@ -98,7 +119,7 @@
     * @name 		#{sel(fixed-bottom)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.fixed.bottom
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```fixed``` bottom
     *
@@ -123,7 +144,7 @@
     * @name 		#{sel(sticky)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.sticky
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```sticky```
     *
@@ -147,7 +168,7 @@
     * @name 		#{sel(sticky-top)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.position.sticky.top
-    * @type        class
+    * @type        Classname
     *
     * Set an element position as ```sticky``` top
     *
