--- a/toolkits/sugar/src/scss/helper/class/_pull.scss
+++ b/toolkits/sugar/src/scss/helper/class/_pull.scss
@@ -1,10 +1,27 @@
+/**
+ * @name              helper-pull-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "pull" related helper classes.
+ *
+ * @classname     #{sel(pull-left)}        Allows you to pull an element to the left side
+ * @classname     #{sel(pull-right)}        Allows you to pull an element to the right side
+ * @classname     #{sel(pull-none)}        Reset the pull (float) styling on the element
+ *
+ * @example         scss
+ * @include Sugar.helper-pull-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin helper-pull-classes() {
   @if class-match-namespace('sugar.helper.pull.left') {
     /**
     * @name 		#{sel(pull-left)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.pull.left
-    * @type        class
+    * @type        Classname
     *
     * Allows you to pull an element to the left side
     *
@@ -25,7 +42,7 @@
     * @name 		#{sel(pull-right)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.pull.right
-    * @type        class
+    * @type        Classname
     *
     * Allows you to pull an element to the right side
     *
@@ -47,10 +64,10 @@
     * @name 		#{sel(pull-none)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.pull.none
-    * @type        class
+    * @type        Classname
     *
     * Reset the pull (float) styling on the element
-    *
+    *   
     * @example 	html
     * <div>
     * 	<span class="#{sel(pull-none)}">Hello world</span>
