--- a/toolkits/sugar/src/scss/helper/class/_ratio.scss
+++ b/toolkits/sugar/src/scss/helper/class/_ratio.scss
@@ -1,10 +1,31 @@
+/**
+ * @name              helper-ratio-classes
+ * @namespace         sugar.scss.helper.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "ratio" related helper classes.
+ *
+ * @classname     #{sel(ratio-21-9)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 21 * 9
+ * @classname     #{sel(ratio-9-21)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
+ * @classname     #{sel(ratio-16-9)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
+ * @classname     #{sel(ratio-9-16)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
+ * @classname     #{sel(ratio-4-3)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 4 * 3
+ * @classname     #{sel(ratio-3-4)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 3 * 4
+ * @classname     #{sel(ratio-1-1)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100%
+ *
+ * @example         scss
+ * @include Sugar.helper-ratio-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin helper-ratio-classes() {
   @if class-match-namespace('sugar.helper.ratio.21-9') {
     /**
     * @name 		#{sel(ratio-21-9)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.21-9
-    * @type        class
+    * @type        Classname
     *
     * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 21 * 9
     *
@@ -23,10 +44,10 @@
     * @name 		#{sel(ratio-9-21)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.9-21
-    * @type        class
+    * @type        Classname
     *
-    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
-    *
+    * Keep a 9/21 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
+    *    
     * @example 	html
     * <div class="#{sel(bg-primary)} #{sel(ratio-9-21)}"></div>
     *
@@ -43,10 +64,10 @@
     * @name 		#{sel(ratio-16-9)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.16-9
-    * @type        class
+    * @type        Classname
     *
     * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
-    *
+    *    
     * @example 	html
     * <div class="#{sel(bg-primary)} #{sel(ratio-16-9)}"></div>
     *
@@ -62,9 +83,9 @@
     * @name 		#{sel(ratio-9-16)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.9-16
-    * @type        class
+    * @type        Classname
     *
-    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
+    * Keep a 9/16 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
     *
     * @example 	html
     * <div class="#{sel(bg-primary)} #{sel(ratio-9-16)}"></div>
@@ -82,7 +103,7 @@
     * @name 		#{sel(ratio-4-3)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.4-3
-    * @type        class
+    * @type        Classname
     *
     * Keep a 4/3 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 4 * 3
     *
@@ -101,7 +122,7 @@
     * @name 		#{sel(ratio-3-4)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.ratio.3-4
-    * @type        class
+    * @type        Classname
     *
     * Keep a 3/4 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 3 * 4
     *
