--- a/toolkits/sugar/src/scss/transition/class/_transition.scss
+++ b/toolkits/sugar/src/scss/transition/class/_transition.scss
@@ -1,3 +1,18 @@
+/**
+ * @name              transition-classes
+ * @namespace         sugar.scss.transition.class
+ * @type              Mixin
+ *
+ * This mixin generate all the "transition" related classes.
+ *
+ * @classname       #{sel("tr-[name]")}        Apply the transition [name]
+ *
+ * @example         scss
+ * @include Sugar.transition-classes();
+ *
+ * @since         2.0.0
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+ */
 @mixin transition-classes() {
   @if class-match-namespace('sugar.transition') {
 
@@ -11,7 +26,7 @@
           * @name       	#{sel(tr-#{$name})}
           * @namespace       sugar.scss.transition.class
           * @class-namespace           sugar.transition.#{$name}
-          * @type        class
+          * @type        Classname
           *
           * Apply the transition **#{$name}**
           *
