--- a/toolkits/sugar-ui/src/scss/03_generic/_all.scss
+++ b/toolkits/sugar-ui/src/scss/03_generic/_all.scss
@@ -2,6 +2,7 @@
  * Generic
  * All the generic codebase for the project like typography, resets, etc...
  */
- @import 'classes';
- @import 'init';
+@import 'classes';
+@import 'icons';
+@import 'init';
 
