--- a/toolkits/sugar/src/scss/_sugar.scss
+++ b/toolkits/sugar/src/scss/_sugar.scss
@@ -3,6 +3,7 @@
 @import 'core/all';
 
 @import 'animation/all';
+@import 'background/all';
 @import 'coffeekraken/all';
 @import 'color/all';
 @import 'component/all';
