--- a/toolkits/sugar-ui/src/scss/06_organisms/_s-sugar-ui.scss
+++ b/toolkits/sugar-ui/src/scss/06_organisms/_s-sugar-ui.scss
@@ -4,6 +4,48 @@
 $primaryColor: #15191b;
 $secondaryColor: #2b3438;
 
+$baseFontSize: 16;
+$gridRowHeight: 4;
+
+@function calculateTypeOffset($lh, $fontSize, $descenderHeightScale) {
+    $lineHeightScale: $lh / $fontSize;
+    @return ($lineHeightScale - 1) / 2 + $descenderHeightScale;
+  }
+  
+  @mixin basekick($typeSizeModifier, $typeRowSpan, $descenderHeightScale, $capHeight) {
+    $fontSize: $typeSizeModifier * $baseFontSize;
+    $lineHeight: $typeRowSpan * $gridRowHeight;
+    $typeOffset: calculateTypeOffset($lineHeight, $fontSize, $descenderHeightScale);
+    $topSpace: $lineHeight - $capHeight * $fontSize;
+    $heightCorrection: 0;
+    
+    @if $topSpace > $gridRowHeight {
+      $heightCorrection: $topSpace - ($topSpace % $gridRowHeight);
+    }
+    
+    $preventCollapse: 1;
+    
+    font-size: #{$fontSize}px;
+    line-height: #{$lineHeight}px;
+    transform: translateY(#{$typeOffset}em);
+    padding-top: $preventCollapse;
+  
+    &::before {
+      content: "";
+      margin-top: #{-($heightCorrection + $preventCollapse)}px;
+      display: block;
+      height: 0;
+    }
+  }
+
+  @mixin Lato($typeSizeModifier, $typeRowSpan) {
+    $latoDescenderHeightScale: 0.11;
+    $latoCapHeight: 0.75;
+    
+    @include basekick($typeSizeModifier, $typeRowSpan, $latoDescenderHeightScale, $latoCapHeight);
+    font-family: Lato;
+  }
+
 .s-sugar-ui {
     position: fixed;
     top: 0; left: 0;
@@ -51,10 +93,10 @@ $secondaryColor: #2b3438;
         pointer-events: all;
 
         transition: all ease-in-out .2s;
-        transform: translateY(-100%);
-        &:focus-within {
-            transform: translateY(0);
-        }
+        // transform: translateY(-100%);
+        // &:focus-within {
+        //     transform: translateY(0);
+        // }
 
         .s-filtrable-input {
             height: 100%;
@@ -78,6 +120,9 @@ $secondaryColor: #2b3438;
 
     .s-sugar-ui-input-navigation__list {
         background: white;
+        display: block !important;
+        opacity: 1 !important;
+        pointer-events: all !important;
     }
         .s-sugar-ui-input-navigation__list-loading {
             padding: Sugar.lnf(padding);
@@ -139,6 +184,34 @@ $secondaryColor: #2b3438;
               color: white;
           }
           .s-sugar-ui-input-navigation__list-item-highlight {
-            background-color: Sugar.color(primary, dark);
+            background-color: Sugar.color(primary);
             color: white;
+            position: relative;
+            display: inline-block;
+            padding: 0 4px;
+
+            @include Lato(2, 10);
+
+            // &::after, &::before {
+            //     content: '';
+            //     display:block;
+            //     position: absolute;
+            //     background-color: Sugar.color(primary);
+            // }
+            // &::before {
+            //     top: 0; left: 0;
+            //     width: 100%; height: 5px;
+            //     transform: translateY(-100%);
+            //     // background: red;
+            //     border-top-left-radius: 4px;
+            //     border-top-right-radius: 4px;
+            // }
+            // &::after {
+            //     top: 100%; left: 0;
+            //     width: 100%; height: 8px;
+            //     // background: green;
+            //     border-bottom-left-radius: 4px;
+            //     border-bottom-right-radius: 4px;
+            // }
+
           }
