--- a/toolkits/sugar-ui/src/scss/07_molecules/_s-sugar-ui-search-navigation-web-component.scss
+++ b/toolkits/sugar-ui/src/scss/07_molecules/_s-sugar-ui-search-navigation-web-component.scss
@@ -1,2 +1,2 @@
-@use '@coffeekraken/s-filtrable-input/index' as SFiltrableInput;
-@include SFiltrableInput.style();
+// @use '@coffeekraken/s-filtrable-input/index' as SFiltrableInput;
+// @include SFiltrableInput.style();
