--- a/toolkits/sugar-ui/src/scss/index.scss
+++ b/toolkits/sugar-ui/src/scss/index.scss
@@ -4,6 +4,10 @@
  */
  @import './00_vendors/all';
 
+body {
+  background: red;
+}
+
  /**
   * Setup
   * Setup all the different parts/modules/libraries.
