--- a/toolkits/sugar-ui/src/scss/06_organisms/_all.scss
+++ b/toolkits/sugar-ui/src/scss/06_organisms/_all.scss
@@ -4,4 +4,4 @@
  * An organism can contain other molecules or atoms and does not have to relay on his ancestors
  * to be properly displayed.
  */
-@import './s-sugar-ui';
+// @import './s-sugar-ui';
