--- a/toolkits/sugar-ui/src/css/index.scss
+++ b/toolkits/sugar-ui/src/css/index.scss
@@ -1,8 +1,8 @@
-// /**
-//  * Vendors
-//  * All external libraries needed in the project.
-//  */
-//  @import './00_vendors/all';
+/**
+ * Vendors
+ * All external libraries needed in the project.
+ */
+ @import './00_vendors/all';
 
 //  /**
 //   * Setup
